force-app/main/default/objects/EEC_Custom_Header_Hero_Config__mdt/EEC_Custom_Header_Hero_Config__mdt.object-meta.xml
<CustomObject>
    <label>EEC - Custom Header Hero Config</label>
    <pluralLabel>EEC - Custom Header Hero Configs</pluralLabel>
</CustomObject>