force-app/main/default/objects/EEC_Custom_Header_Hero_Config__mdt/fields/Display_Hero_Section__c.field-meta.xml
<CustomField>
    <fullName>Display_Hero_Section__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Determines, whether to display the Hero Region of the custom header component or not.</inlineHelpText>
    <label>Display Hero Section</label>
    <type>Checkbox</type>
</CustomField>