force-app/main/default/objects/EEC_Custom_Header_Hero_Config__mdt/fields/Display_Search__c.field-meta.xml
<CustomField>
    <fullName>Display_Search__c</fullName>
    <defaultValue>true</defaultValue>
    <inlineHelpText>Determines whether to display the Search Bar in the Hero Section or not. If the Hero Section isn&apos;t displayed then the Search Bar is not displayed as well.</inlineHelpText>
    <label>Display Search</label>
    <type>Checkbox</type>
</CustomField>