force-app/main/default/objects/EEC_Custom_Header_Hero_Config__mdt/fields/Is_Active__c.field-meta.xml
<CustomField>
    <fullName>Is_Active__c</fullName>
    <defaultValue>true</defaultValue>
    <inlineHelpText>Determines whether this configuration is active or not. Rendering of the Hero Section will only be affected by active configurations.</inlineHelpText>
    <label>Is Active</label>
    <type>Checkbox</type>
</CustomField>