force-app/main/default/objects/EEC_Custom_Header_Hero_Config__mdt/fields/Network_Community_Name__c.field-meta.xml
<CustomField>
    <fullName>Network_Community_Name__c</fullName>
    <inlineHelpText>Determines the Network/Community name to which this configuration record would apply.</inlineHelpText>
    <label>Network/Community Name</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>