force-app/main/default/objects/EEC_Custom_Header_Hero_Config__mdt/fields/Object_List_View_Page_URLs__c.field-meta.xml
<CustomField>
    <fullName>Object_List_View_Page_URLs__c</fullName>
    <inlineHelpText>Comma-separated list of Experience Builder Record Pages to which this configuration record will apply. Example /account/:Account/00B5i000004pPPpppp. Format /baseURL/objectApiName/:filterName</inlineHelpText>
    <label>Object List View Page URLs</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>