force-app/main/default/objects/EEC_Custom_Header_Hero_Config__mdt/fields/Object_Related_List_Page_URLs__c.field-meta.xml
<CustomField>
    <fullName>Object_Related_List_Page_URLs__c</fullName>
    <inlineHelpText>Comma-separated list of Experience Builder Object Related Pages to which this configuration record will apply. Example: /account/related/0015i000006epppPPP/Contacts. Format: /baseURL/:related/:recordId/:relationshipApiName</inlineHelpText>
    <label>Object Related List Page URLs</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>