force-app/main/default/objects/EEC_Custom_Header_Hero_Config__mdt/fields/Page_API_Names__c.field-meta.xml
<CustomField>
    <fullName>Page_API_Names__c</fullName>
    <inlineHelpText>Comma-separated list of Named Navigation Pages to which this configuration record will apply. Include the following here:

Home
Account_Management
Contact_Support
Error
Login
My_Account
Top_Articles
Topic_Catalog

API Name of any custom page</inlineHelpText>
    <label>Page API Names(For Named Pages)</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>