force-app/main/default/objects/EEC_Custom_Header_Hero_Config__mdt/fields/Record_Detail_Page_URLs__c.field-meta.xml
<CustomField>
    <fullName>Record_Detail_Page_URLs__c</fullName>
    <inlineHelpText>Comma-separated list of Experience Builder Record Pages to which this configuration record will apply. Example: /account/:recordId. Format: /objectApiName/:recordId</inlineHelpText>
    <label>Record Detail Page URLs</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>