force-app/main/default/objects/EEC_Custom_Header_Hero_Config__mdt/fields/Search_Placeholder__c.field-meta.xml
<CustomField>
    <fullName>Search_Placeholder__c</fullName>
    <inlineHelpText>Determines the placeholder of the input field of the search bar, if the hero region is being displayed.</inlineHelpText>
    <label>Search Placeholder</label>
    <length>255</length>
    <type>Text</type>
</CustomField>