force-app/main/default/objects/EEC_Custom_Header_Hero_Config__mdt/fields/Search_Subtitle__c.field-meta.xml
<CustomField>
    <fullName>Search_Subtitle__c</fullName>
    <inlineHelpText>Determines the subtitle of the search bar, if the hero region is being displayed.</inlineHelpText>
    <label>Search Subtitle</label>
    <length>255</length>
    <type>Text</type>
</CustomField>