force-app/main/default/objects/EEC_Custom_Header_Hero_Config__mdt/fields/Search_Title__c.field-meta.xml
<CustomField>
    <fullName>Search_Title__c</fullName>
    <inlineHelpText>Determines the title of the search bar, if the hero region is being displayed.</inlineHelpText>
    <label>Search Title</label>
    <length>255</length>
    <type>Text</type>
</CustomField>