force-app/main/default/objects/EEC_Custom_Header_Hero_Config__mdt/listViews/All_Details.listView-meta.xml
<ListView>
    <fullName>All_Details</fullName>
    <columns>MasterLabel</columns>
    <columns>DeveloperName</columns>
    <columns>Is_Active__c</columns>
    <columns>Network_Community_Name__c</columns>
    <columns>Display_Hero_Section__c</columns>
    <columns>Display_Search__c</columns>
    <columns>Search_Title__c</columns>
    <columns>Search_Subtitle__c</columns>
    <columns>Search_Placeholder__c</columns>
    <columns>Object_List_View_Page_URLs__c</columns>
    <columns>Object_Related_List_Page_URLs__c</columns>
    <columns>Page_API_Names__c</columns>
    <columns>Record_Detail_Page_URLs__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Details</label>
    <language>en_US</language>
</ListView>